# tokibean

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  LICENSE  README.md  README.zh-CN.md  gen-icon.js  package-lock.json  package.json
.github/workflows/: build.yml
docs/: _og-src.html  codex-hooks.md  index.html
docs/adr/: 0001-multi-agent-positioning.md  0002-codex-first-only.md  0003-one-pet-aggregate.md  0004-per-agent-quota-window.md  0005-sleep-when-all-exhausted.md  0006-install-status-observed.md  0007-detect-agents-additive-config.md  0008-json-stdout-contract.md  0009-codex-tokens-not-cost.md  0010-assets-ship-with-the-feature.md  0011-verify-against-a-real-codex.md  0012-toml-edit-for-codex-config.md  0013-no-config-toml-write-installer-owns-hooks-json.md  0014-setup-lives-in-settings.md  0015-adopt-the-claude-pet-config.md  0016-skin-state-branching-stays-per-skin.md
docs/agents/: domain.md
src/: about.html  index.html  main.js  pet.js  settings.html  skins.json  style.css  update.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  dialogs.json
src-tauri/icons/: icon.icns
src-tauri/src/: agents.rs  bridge_hermes.py  codex.rs  codex_install.rs  config.rs  fetch_policy.rs  focus.rs  hermes_install.rs  hermes_usage.rs  hooks_install.rs  hooks_server.rs  i18n.rs  login.rs  main.rs  official.rs  plugin_hermes.py  plugin_hermes.yaml  projection.rs  reducer.rs  state.rs  updater.rs  usage.rs  wsl.rs
src/skins/: bean.js  daruma.js  maneki.js  shiba.js  tabby.js  tuerye.js
tools/: gen-skin-gifs.sh  skin-capture.html
(+2 files in other folders)
