[package]
name = "claude-pet"
version = "0.1.7"
description = "住在桌面上的 Claude Code 状态监视宠物"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
chrono = "0.4"
dirs = "5"
sha2 = "0.10"
getrandom = "0.2"
base64 = "0.22"

[profile.release]
strip = true
lto = true
opt-level = "s"
